# iso-cpp-execution

./: CMakeLists.txt  README.md
include/: execution
test/: CMakeLists.txt  inline_executor.cpp
